# Super-Sahur

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
headers/: Blocuri_Inamici.h  Coin.cpp  Coin.h  CoinSprite.cpp  CoinSprite.h  Enemy.cpp  Enemy.h  EnemySprite.cpp  EnemySprite.h  Game.cpp  Game.h  GameExcepsions.cpp  GameExcepsions.h  GameObject.cpp  GameObject.h  Menu.cpp  Menu.h  Player.cpp  Player.h  PlayerSprite.cpp  PlayerSprite.h  Terrain.cpp  Terrain.h  TerrainSprite.cpp  TerrainSprite.h  World.cpp  World.h
scripts/: run_cppcheck.sh
